--- a/src/App.css
+++ b/src/App.css
@@ -99,11 +99,15 @@ nav.navbar a.navbar-brand {
 }
 nav.navbar .navbar-nav .nav-link.navbar-link {
   font-weight: 400;
-  color: #fff !important;
+  color: #ffffff ;
   letter-spacing: 0.8px;
   padding: 0 25px;
   font-size: 18px;
-  opacity: 0.75;
+  opacity: 0.6;
+}
+nav.navbar .navbar-nav a.nav-link.navbar-link:hover {
+    opacity: 1;
+    color: #9c0af0  
 }
 nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
 nav.navbar .navbar-nav a.nav-link.navbar-link.active {
@@ -120,14 +124,14 @@ span.navbar-text {
 .social-icon a {
     width: 42px;
     height: 42px;
-    background: rgba(217, 217, 217, 0.1);
+    background: rgba(194, 10, 240, 0.1);
     display: inline-flex;
-    border-radius: 50%;
+    border-radius: 20%;
     margin-right: 6px;
     align-items: center;
     justify-content: center;
     line-height: 1;
-    border: 1px solid rgba(255, 255, 255, 0.5);
+    border: 1px solid rgba(240, 11, 11, 0.5);
 }
 .social-icon a::before {
     content: "";
@@ -135,9 +139,9 @@ span.navbar-text {
     height: 42px;
     position: absolute;
     background-color: #ffffff;
-    border-radius: 50%;
+    border-radius: 20%;
     transform: scale(0);
-	transition: 0.3s ease-in-out;
+	transition: 0.15s ease-in-out;
 }
 .social-icon a:hover::before {
     transform: scale(1);
@@ -145,10 +149,6 @@ span.navbar-text {
 .social-icon a img {
 	width: 40%;
 	z-index: 1;
-	transition: 0.3s ease-in-out;
-}
-.social-icon a:hover img {
-	filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) brightness(95%) contrast(86%);
 }
 .navbar-text button {
   font-weight: 700;
@@ -176,7 +176,7 @@ span.navbar-text {
   transition: 0.3s ease-in-out;
 }
 .navbar-text button:hover {
-  color: #121212;
+  color: #e940f8;
 }
 .navbar-text button:hover::before {
 	content: "";
