editing the back ground

--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@ nav.navbar .navbar-nav .nav-link.navbar-link {
 }
 nav.navbar .navbar-nav a.nav-link.navbar-link:hover {
     opacity: 1;
-    color: #9c0af0  
+    color: #00ffdd  
 }
 nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
 nav.navbar .navbar-nav a.nav-link.navbar-link.active {
@@ -231,3 +231,11 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 /************ Banner Css ************/
+.banner {
+  margin-top: 0;
+  padding: 260px 0 100px 0;
+  background-image: url('./assets/img/1304280.png');
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
