--- a/src/App.css
+++ b/src/App.css
@@ -332,9 +332,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .skill-slider {
   width: 80%;
-  margin-top: 40px;
-  margin-left: 120px;
-  /*margin: 0 auto;*/
+  padding-top: 40px;
+  margin: 0 auto;
   position: relative;
 }
 .skill-slider .item img {
