--- a/src/App.css
+++ b/src/App.css
@@ -406,6 +406,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border-radius: 30px;
   overflow: hidden;
   margin-bottom: 24px;
+  width: 100%;
+  aspect-ratio: 12/6; /* Garde un ratio uniforme (ex: 16:9) */
+}
+
+.proj-imgbx img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .proj-imgbx::before {
   content: "";
