--- a/src/App.css
+++ b/src/App.css
@@ -461,3 +461,25 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   right: 0;
   z-index: -4;
 }
+/************ Footer Css ************/
+.footer {
+  padding: 0 0 50px 0;
+  background-image: url('./assets/img/footer-bg.png');
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.footer .align-items-center{
+  padding: 50px 0 50px 0;
+}
+.footer img {
+  width: 26%;
+}
+.footer p {
+  margin-left: 40px;
+  font-weight: 400;
+  font-size: 20px;
+  color: #B8B8B8;
+  letter-spacing: 0.5px;
+  margin-top: 20px;
+}
